// Copyright (c) 2018 Timo Savola. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package gate.serverapi;

option go_package = "gate.computer/gate/serverapi";

message ModuleRef {
	string id = 1;
}

message ModuleRefs {
	repeated ModuleRef modules = 1;
}

enum State {
	NONEXISTENT = 0;
	RUNNING = 1;
	SUSPENDED = 2;
	HALTED = 3;
	TERMINATED = 4;
	KILLED = 5;
}

enum Cause {
	NORMAL = 0;
	UNREACHABLE = 3;
	CALL_STACK_EXHAUSTED = 4;
	MEMORY_ACCESS_OUT_OF_BOUNDS = 5;
	INDIRECT_CALL_INDEX_OUT_OF_BOUNDS = 6;
	INDIRECT_CALL_SIGNATURE_MISMATCH = 7;
	INTEGER_DIVIDE_BY_ZERO = 8;
	INTEGER_OVERFLOW = 9;
	BREAKPOINT = 10;
	ABI_DEFICIENCY = 27;
	ABI_VIOLATION = 28;
	INTERNAL = 29;
}

message Status {
	State state = 1;
	Cause cause = 2;
	int32 result = 3;
	string error = 4;
}

message InstanceStatus {
	string instance = 1;
	Status status = 2;
	bool transient = 3;
	bool debugging = 4;
}

message Instances {
	repeated InstanceStatus instances = 1;
}

enum DebugOp {
	CONFIG_GET = 0;
	CONFIG_SET = 1;
	CONFIG_UNION = 2;
	CONFIG_COMPLEMENT = 3;
	READ_GLOBALS = 4;
	READ_MEMORY = 5;
	READ_STACK = 6;
}

message DebugRequest {
	DebugOp op = 1;
	DebugConfig config = 2;
	uint64 addr = 3;
	uint64 size = 4;
}

message DebugResponse {
	string module = 1;
	Status status = 2;
	DebugConfig config = 3;
	bytes data = 4;
}

message DebugConfig {
	bool debug_info = 1; // TODO: specify semantics
	repeated uint64 breakpoints = 2;
}
